update GameState to comply with SonarCloud maintainability requirements
SonarCloud comment: 'Replace this usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()' and ensure that the list is unmodified.'